src/objects/DDS_YoYSegmentation__mdt.object
<CustomObject>
    <description>Price increase on products in the corresponding renewal year.</description>
    <fields>
        <fullName>EffectiveYear__c</fullName>
        <description>Year in which the increase will be applied.</description>
        <inlineHelpText>Year in which the increase will be applied.</inlineHelpText>
        <label>Effective Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsForTesting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is for testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU_Combo</fullName>
                    <default>true</default>
                    <label>EU Combo</label>
                </value>
                <value>
                    <fullName>EU_Market</fullName>
                    <label>EU Market</label>
                </value>
                <value>
                    <fullName>EU_Reit</fullName>
                    <label>EU Reit</label>
                </value>
                <value>
                    <fullName>FullPlatform</fullName>
                    <label>Full Platform</label>
                </value>
                <value>
                    <fullName>MarketCombo</fullName>
                    <label>Market Combo</label>
                </value>
                <value>
                    <fullName>News1</fullName>
                    <label>News 1</label>
                </value>
                <value>
                    <fullName>News2</fullName>
                    <label>News 2</label>
                </value>
                <value>
                    <fullName>News3</fullName>
                    <label>News 3</label>
                </value>
                <value>
                    <fullName>ReactOnly</fullName>
                    <label>React Only</label>
                </value>
                <value>
                    <fullName>REIT_Combo</fullName>
                    <label>REIT Combo</label>
                </value>
                <value>
                    <fullName>US_Combo</fullName>
                    <label>US Combo</label>
                </value>
                <value>
                    <fullName>US_Market</fullName>
                    <label>US Market</label>
                </value>
                <value>
                    <fullName>US_PortfolioTools</fullName>
                    <label>US PortfolioTools</label>
                </value>
                <value>
                    <fullName>US_Reit</fullName>
                    <label>US Reit</label>
                </value>
                <value>
                    <fullName>Detailed_NAV</fullName>
                    <label>Detailed NAV</label>
                </value>
                <value>
                    <fullName>REIT_Detailed_NAV</fullName>
                    <label>REIT + Detailed NAV</label>
                </value>
                <value>
                    <fullName>Combo_Detailed_NAV</fullName>
                    <label>Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>REIT_Combo_Detailed_NAV</fullName>
                    <label>REIT Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>Market + Detailed NAV</fullName>
                </value>
                <value>
                    <fullName>Data_Delivery</fullName>
                    <label>Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Data_Delivery</fullName>
                    <label>REIT + Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Combo_Data_Delivery</fullName>
                    <label>REIT Combo + Data Delivery</label>
                </value>
                <value>
                    <fullName>Market_Data_Delivery</fullName>
                    <label>Market + Data Delivery</label>
                </value>
                <value>
                    <fullName>Combo_Data_Delivery</fullName>
                    <label>Combo + Data Delivery</label>
                </value>
                <value>
                    <fullName>REIT_Detailed_NAV_Data_Delivery</fullName>
                    <label>REIT + Detailed NAV + Data Delivery</label>
                </value>
                <value>
                    <fullName>EU Combo +  Detailed NAV</fullName>
                    <isActive>false</isActive>
                    <label>EU Combo +  Detailed NAV</label>
                </value>
                <value>
                    <fullName>EU REIT +  Detailed NAV</fullName>
                    <isActive>false</isActive>
                    <label>EU REIT +  Detailed NAV</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <label>Sales Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdvisorsOthers</fullName>
                    <default>true</default>
                    <label>Advisors &amp; Others</label>
                </value>
                <value>
                    <fullName>Brokers</fullName>
                </value>
                <value>
                    <fullName>PERE_Companies</fullName>
                    <label>PE/RE Companies</label>
                </value>
                <value>
                    <fullName>PensionsEndowmentsInsuranceCompanies</fullName>
                    <label>Pensions, Endowments, Insurance Companies</label>
                </value>
                <value>
                    <fullName>PublicEquityInvestors</fullName>
                    <label>Public Equity Investors</label>
                </value>
                <value>
                    <fullName>CommercialBanks</fullName>
                    <label>Commercial Banks</label>
                </value>
                <value>
                    <fullName>InvestmentBanks</fullName>
                    <label>Investment Banks</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YoY_Rate__c</fullName>
        <description>The percentage increase for a specific segment and year.</description>
        <inlineHelpText>The percentage increase for a specific segment and year.</inlineHelpText>
        <label>YoY Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>DDS - YoY Segmentation</label>
    <listViews>
        <fullName>Admin</fullName>
        <columns>EffectiveYear__c</columns>
        <columns>Segment__c</columns>
        <columns>SKU__c</columns>
        <columns>YoY_Rate__c</columns>
        <columns>SalesType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsForTesting__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Admin</label>
    </listViews>
    <listViews>
        <fullName>X2023_YoY</fullName>
        <columns>EffectiveYear__c</columns>
        <columns>YoY_Rate__c</columns>
        <columns>Segment__c</columns>
        <columns>SKU__c</columns>
        <columns>SalesType__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsForTesting__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>EffectiveYear__c</field>
            <operation>equals</operation>
            <value>2023</value>
        </filters>
        <label>2023 YoY</label>
    </listViews>
    <pluralLabel>DDS - YoY Segmentations</pluralLabel>
</CustomObject>